# gRPC

./: .gitignore  README.md
c++/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
c++/build_client/: CMakeCache.txt  Makefile  cmake_install.cmake
c++/build_server/: CMakeCache.txt  Makefile  cmake_install.cmake
c++/client/: CMakeLists.txt  client.cpp
c++/codegen/: helloworld.grpc.pb.h
c++/server/: CMakeLists.txt  server.cpp
c++/tools/: client_build.sh  grpc_cpp.sh  server_build.sh
go/: Dockerfile  Makefile  README.md  docker-compose.yml
go/client/: client.go
go/codegen/proto/: helloworld_grpc.pb.go
go/proto/: helloworld.pb.go  helloworld.proto
go/server/: server.go
go/tools/: grpc_go.sh  init.sh
python/: Dockerfile  README.md  docker-compose.yml
python/client/: client.py
python/proto/: codegen.py  helloworld.proto  helloworld_pb2.py  helloworld_pb2_grpc.py
python/server/: server.py
